# py-armodel2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  output.arxml  pyproject.toml  test_port_prototype.py
.claude/commands/: README.md  gen-class.md  gh-workflow.md
.github/workflows/: ci.yml
.iflow/: plan.md
demos/arxml/: AUTOSAR_MOD_AISpecification_ApplicationDataType_Blueprint.arxml  AUTOSAR_MOD_AISpecification_PhysicalDimension_Standard.arxml  AUTOSAR_MOD_AISpecification_PortPrototypeBlueprint_Blueprint.arxml  BswM_Bswmd.arxml
demos/test_validated/: SwRecordDemo.arxml
demos/validated/: AUTOSAR_MOD_AISpecification_ApplicationDataType_Blueprint.arxml  AUTOSAR_MOD_AISpecification_ApplicationDataType_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_Collection_Body_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Collection_Chassis_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Collection_MmedTelmHmi_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Collection_OccptPedSfty_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Collection_Pt_Blueprint.arxml  AUTOSAR_MOD_AISpecification_CompuMethod_Blueprint.arxml  AUTOSAR_MOD_AISpecification_CompuMethod_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_DataConstr_Blueprint.arxml  AUTOSAR_MOD_AISpecification_DataConstr_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_KeywordSet_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Keyword_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_PhysicalDimension_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_PortInterface_Blueprint.arxml  AUTOSAR_MOD_AISpecification_PortInterface_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_PortPrototypeBlueprint_Blueprint.arxml  AUTOSAR_MOD_AISpecification_PortPrototypeBlueprint_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_SwComponentTypes_Blueprint.arxml  AUTOSAR_MOD_AISpecification_Unit_LifeCycle_Standard.arxml  AUTOSAR_MOD_AISpecification_Unit_Standard.arxml  BswM_Bswmd.arxml  SoftwareComponents.arxml
docs/analysis/: skip_classes_serialization_analysis.md  skip_classes_summary.md
docs/designs/: arobject_serialization_details.md  arxml_reader_writer_guide.md  decorators.md  design_rules.md  model_design.md  serialization.md  skip_classes_decorator_solutions.md
docs/json/: index.json  mapping.json
docs/plans/: 00-performance-analysis-summary.md  01-nameconverter-caching.md  02-typehint-caching.md  03-xml-element-optimization.md  04-serializationhelper-caching.md  05-batch-list-serialization.md  2025-02-17-fix-base-type-serialization-design.md  2025-02-17-fix-base-type-serialization.md  2025-02-17-fix-binary-comparison-test-design.md  2025-02-17-fix-binary-comparison-test.md  2025-02-17-fix-serialize-signature-tests-design.md  AGENTS.md  (+17 more)
examples/: builder_classes_example.py  new_api_example.py
scripts/: format_arxml.sh  format_arxml_xmllint.py  generate_models.sh  setup.sh
tests/: test_generate_models.py
tools/: __init__.py  analyze_maturity.py  circular_import_utils.py  detect_circular_imports.py  generate_model_mappings.py  generate_models.py  generate_models_init.py  generate_xsd_metadata.py  identify_xml_tag_exceptions.py  skip_classes.yaml  test_singularization.py  update_json_attributes.py
(+6413 files in other folders)
