[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armodel2"
version = "0.1.0"
description = "Python library for AUTOSAR ARXML models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
armodel = "armodel.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
strict = true

# Exclude generated model files from strict checking
[[tool.mypy.overrides]]
module = "armodel.models.M2.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_errors = true

# Also exclude MSR documentation models which have generated type issues
[[tool.mypy.overrides]]
module = "armodel.models.M2.MSR.*"
ignore_errors = true

# Ignore unused-ignore in decorators (dynamic attributes)
[[tool.mypy.overrides]]
module = "armodel.serialization.decorators"
warn_unused_ignores = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"src/armodel/models/M2/*" = ["F401", "F821", "E741"]
"src/armodel/models/M2/**/*" = ["F401", "F821", "E741"]
